--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "~6.0.1",
-    "@react-navigation/stack": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
+    "@react-navigation/stack": "~6.0.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "@unimodules/core": "6.0.0",
     "apisauce": "2.0.0",
     "expo-linear-gradient": "^9.2.0",
@@ -41,8 +42,8 @@
     "mobx": "6.1.8",
     "mobx-react-lite": "3.2.0",
     "mobx-state-tree": "5.0.1",
-    "react": "17.0.1",
-    "react-native": "0.64.2",
+    "react": "17.0.2",
+    "react-native": "0.66.1",
     "react-native-gesture-handler": "1.10.3",
     "react-native-keychain": "6.2.0",
     "react-native-safe-area-context": "3.1.8",
@@ -51,6 +52,7 @@
     "reactotron-mst": "3.1.3",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.0",
+    "redux-persist": "^6.0.0",
     "validate.js": "0.13.1"
   },
   "devDependencies": {
@@ -65,7 +67,7 @@
     "@types/jest": "26.0.19",
     "@types/react": "16.14.0",
     "@types/react-native": "0.63.40",
-    "@types/react-test-renderer": "16.9.4",
+    "@types/react-test-renderer": "17.0.1",
     "@typescript-eslint/eslint-plugin": "4.10.0",
     "@typescript-eslint/parser": "4.10.0",
     "babel-jest": "26.6.3",
@@ -85,9 +87,9 @@
     "jest-expo": "^40.0.1",
     "jetifier": "1.6.6",
     "npm-run-all": "4.1.5",
-    "patch-package": "6.2.2",
+    "patch-package": "^6.4.7",
     "postinstall-prepare": "1.0.1",
-    "prettier": "2.2.1",
+    "prettier": "2.4.1",
     "react-devtools-core": "4.10.1",
     "react-dom": "^17.0.2",
     "react-native-clean-project": "^3.6.3",
