--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.0",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "validate.js": "0.13.1"
   },
   "devDependencies": {
